--- a/style/all.css
+++ b/style/all.css
@@ -435,7 +435,8 @@ th {
   width: 25%; }
 
 .bit-4 {
-  width: 33.3333%; }
+  width: 33.3333%;
+  float: left; }
 
 .bit-5 {
   width: 41.66667%; }
@@ -498,16 +499,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #232323;
   color: #fafafa;
-  font-family: Native-Regular, Arial, Helvetica, sans-serif; }
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-size: 1em; }
 
 html {
-  font-size: 100%;
   box-sizing: border-box; }
 
 *,
 *::before,
 *::after {
   box-sizing: inherit; }
+
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
 
 h1 {
   font-family: Native-Regular, Arial, Helvetica, sans-serif;
@@ -521,8 +527,9 @@ h2 {
 
 h3 {
   font-family: Native-Regular, Arial, Helvetica, sans-serif;
-  font-weight: 400;
-  font-size: 1em; }
+  font-weight: 500;
+  font-size: 1.2em;
+  padding: 2rem 0 0.5rem; }
 
 h5 {
   font-family: Native-Regular, Arial, Helvetica, sans-serif;
@@ -547,5 +554,50 @@ Specific Element Styles
     .menu ul li a {
       text-decoration: none;
       color: #fafafa; }
+
+.news {
+  margin-bottom: 80px; }
+
+.news-card {
+  background-color: #414141;
+  padding: 0;
+  padding-bottom: 40px;
+  -webkit-box-shadow: 2px 2px 5px -1px rgba(0, 0, 0, 0.6);
+  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+  -moz-box-shadow: 2px 2px 5px -1px rgba(0, 0, 0, 0.6);
+  /* Firefox 3.5 - 3.6 */
+  box-shadow: 2px 2px 5px -1px rgba(0, 0, 0, 0.6);
+  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */ }
+
+.img-card {
+  position: relative; }
+  .img-card:before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: 75%; }
+  .img-card > .content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; }
+  .img-card img {
+    max-width: 100%;
+    display: block;
+    height: auto; }
+
+.text {
+  padding-left: 0.9375rem;
+  padding-right: 0.9375rem; }
+  .text p {
+    margin-bottom: 1.2rem; }
+  .text .limit {
+    height: 120px; }
+  .text .foot-link {
+    width: 50%;
+    float: left; }
+  .text .right {
+    text-align: right; }
 
 /*# sourceMappingURL=all.css.map */
