--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -67,16 +67,22 @@ img {
     background-color: $bkgd-dark;
     color: $fore-light;
     font-family: $body-font;
+    font-size: 1em;
   }
 
 html {
-  font-size: 100%;
   box-sizing: border-box; }
 
 *,
 *::before,
 *::after {
   box-sizing: inherit; }
+
+  *, *:after, *:before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
 
 h1 {
     font-family: $display-font;
@@ -93,8 +99,9 @@ h2 {
 
 h3 {
   font-family: $display-font;
-  font-weight: 400;
-  font-size: 1em;
+  font-weight: 500;
+  font-size: 1.2em;
+  padding: 2rem 0 0.5rem;
 }
 
 h4 {
@@ -134,5 +141,53 @@ Specific Element Styles
       text-decoration: none;
       color: $fore-light;
     }
+  }
+}
+
+
+//News & Media
+//General Container
+.news {
+  margin-bottom: 80px;
+}
+
+//3x cards
+.news-card {
+  background-color: $bkgd-medium;
+  padding: 0;
+  padding-bottom: 40px;
+  @include shadow;
+
+}
+
+//images
+.img-card {
+  @include aspect-ratio(4, 3);
+
+  img {
+    max-width: 100%;
+    display:block;
+    height: auto;
+  }
+}
+
+//text
+.text {
+  padding-left: 0.9375rem;
+  padding-right: 0.9375rem;
+
+  p {
+    margin-bottom: 1.2rem;
+  }
+
+  .limit {//Limit designed to overflow any text, keeping cards consistent size...
+    height: 120px;
+  }
+  .foot-link{
+    width: 50%;
+    float: left;
+  }
+  .right {
+    text-align: right;
   }
 }
