--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -52,22 +52,18 @@ td {
   padding: 0; }
 
 
-img {
-  max-width: 100%;
-  height: auto;
-  -ms-interpolation-mode: bicubic;
-  display: inline-block;
-  vertical-align: middle; }
+
 
   body {
     padding: 0;
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
     background-color: $bkgd-dark;
     color: $fore-light;
     font-family: $body-font;
-    font-size: 1em;
+    font-size: 100%;
   }
 
 html {
@@ -84,6 +80,13 @@ html {
     box-sizing: border-box;
   }
 
+  img {
+    max-width: 100%;
+    height: auto;
+    -ms-interpolation-mode: bicubic;
+    display: inline-block;
+    vertical-align: middle; }
+
 h1 {
     font-family: $display-font;
     font-weight: 700;
@@ -94,7 +97,8 @@ h1 {
 h2 {
   font-family: $display-font;
   font-weight: 400;
-  font-size: 1.2em;
+  font-size: 2.25em; /* 36px / 16px = 2.25em */
+  padding: 2.25rem 0 1rem;
 }
 
 h3 {
