--- a/style/scss/_grid.scss
+++ b/style/scss/_grid.scss
@@ -64,6 +64,7 @@
 
 //bits used to represent column widths, 12-col grid
 
+
 .bit-1 {
   width: 8.333%; }
 
@@ -74,10 +75,24 @@
     width: 25%;
 }
 
-.bit-4 {
-    width: 33.3333%;
+
+
+
+
+
+.bit-1-3-3 { //titled based on responsive reflow (mobile-tablet-desktop)
+    width: 100%; //mobile, single row
     float: left;
+
+    @media screen and (min-width: 40em) { //tablet, desktop, 3 per row
+      width: 33.33333%;
+      float: left;
+    }
+
 }
+
+
+
 
 .bit-5 {
     width: 41.66667%;
