--- a/style/scss/_var.scss
+++ b/style/scss/_var.scss
@@ -32,9 +32,9 @@ $display-font:  Native-Regular, Arial, Helvetica, sans-serif;
   }
 }
 
-//Box Shadow mixin-
+
 @mixin shadow {
-  -webkit-box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.6);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-  -moz-box-shadow:    2px 2px 5px -1px rgba(0,0,0,0.6);  /* Firefox 3.5 - 3.6 */
-  box-shadow:         2px 2px 5px -1px rgba(0,0,0,0.6);  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+  -webkit-box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.6);
+  -moz-box-shadow:    2px 2px 5px -1px rgba(0,0,0,0.6);
+  box-shadow:         2px 2px 5px -1px rgba(0,0,0,0.6);
 }
