--- a/style/all.css
+++ b/style/all.css
@@ -357,8 +357,6 @@ th {
   padding: 0; }
 
 #page {
-  max-width: 75rem;
-  margin: 0 auto;
   padding-left: 1.8rem;
   padding-right: 1.8rem; }
 
@@ -374,40 +372,16 @@ th {
 .row::after {
   clear: both; }
 
-.row.collapse > .column, .row.collapse > .columns {
-  padding-left: 0;
-  padding-right: 0; }
-
-.row .row {
-  max-width: none;
-  margin-left: -0.625rem;
-  margin-right: -0.625rem; }
-
-@media screen and (min-width: 40em) {
-  .row .row {
-    margin-left: -0.9375rem;
-    margin-right: -0.9375rem; } }
-.row .row.collapse {
-  margin-left: 0;
-  margin-right: 0; }
-
-.row.expanded {
-  max-width: none; }
-
-.row.expanded .row {
-  margin-left: auto;
-  margin-right: auto; }
-
 .column, .columns {
   width: 100%;
   float: left;
-  padding-left: 0.625rem;
-  padding-right: 0.625rem; }
+  padding-left: 0.6rem;
+  padding-right: 0.6rem; }
 
 @media screen and (min-width: 40em) {
   .column, .columns {
-    padding-left: 0.9375rem;
-    padding-right: 0.9375rem; } }
+    padding-left: 0.9rem;
+    padding-right: 0.9rem; } }
 .column:last-child:not(:first-child), .columns:last-child:not(:first-child) {
   float: right; }
 
@@ -421,7 +395,8 @@ th {
   width: 16.66667%; }
 
 .bit-3 {
-  width: 25%; }
+  width: 25%;
+  float: left; }
 
 .bit-1-3-3 {
   width: 100%;
@@ -431,11 +406,12 @@ th {
       width: 33.33333%;
       float: left; } }
 
+.bit-6 {
+  width: 50%;
+  float: left; }
+
 .bit-5 {
   width: 41.66667%; }
-
-.bit-6 {
-  width: 50%; }
 
 .bit-7 {
   width: 58.33333%; }
@@ -511,7 +487,8 @@ img {
 h1 {
   font-family: Native-Regular, Arial, Helvetica, sans-serif;
   font-weight: 700;
-  font-size: 2.6em; }
+  font-size: 2.3em;
+  padding-bottom: 0.3em; }
 
 h2 {
   font-family: Native-Regular, Arial, Helvetica, sans-serif;
@@ -524,7 +501,7 @@ h3 {
   font-family: Native-Regular, Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 1.2em;
-  padding: 2rem 0 0.5rem; }
+  padding-bottom: 2em; }
 
 h5 {
   font-family: Native-Regular, Arial, Helvetica, sans-serif;
@@ -538,27 +515,51 @@ a {
 a:hover {
   text-shadow: 2px 2px 5px magenta; }
 
+.btn {
+  width: 155px;
+  height: 60px;
+  border: 2px solid magenta;
+  color: magenta;
+  font-size: 0.8em;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
 /* ========================================
 Specific Element Styles
 ========================================
 */
+/* --------------  Header ----------------- */
 .header {
   height: 100vh; }
 
+.nav-bar {
+  margin-top: 42px;
+  margin-bottom: 24px; }
+
 .logo {
+  width: 120px;
+  height: 40px;
   background-color: magenta;
-  padding-bottom: 33%; }
+  float: left; }
+  @media screen and (min-width: 40em) {
+    .logo {
+      width: 240px;
+      height: 80px; } }
 
 .menu {
-  padding-left: 1rem; }
+  float: right;
+  /*
+  @media screen and (min-width:40em) {
+    width: 25%;
+  }*/ }
   .menu ul {
     list-style-type: none; }
 
-/*
+.display-text {
+  margin-top: 15vh; }
 
-News & Media
-
-*/
+/* --------------  News & Media  ----------------- */
 .news {
   margin-bottom: 60px; }
 
