--- a/style/scss/_grid.scss
+++ b/style/scss/_grid.scss
@@ -4,8 +4,6 @@
 
 //whole page wrapper
 #page {
-  max-width: 75rem;
-  margin: 0 auto;
   padding-left: 1.8rem;
   padding-right: 1.8rem;
 
@@ -19,45 +17,29 @@
   max-width: 75rem;
   margin-left: auto;
   margin-right: auto; }
+
   .row::before, .row::after {
     content: ' ';
     display: table; }
+
   .row::after {
     clear: both; }
-  .row.collapse > .column, .row.collapse > .columns {
-    padding-left: 0;
-    padding-right: 0; }
-  .row .row {
-    max-width: none;
-    margin-left: -0.625rem;
-    margin-right: -0.625rem; }
-    @media screen and (min-width: 40em) {
-      .row .row {
-        margin-left: -0.9375rem;
-        margin-right: -0.9375rem; } }
-    .row .row.collapse {
-      margin-left: 0;
-      margin-right: 0; }
-  .row.expanded {
-    max-width: none; }
-    .row.expanded .row {
-      margin-left: auto;
-      margin-right: auto; }
-
-
 
 
 .column, .columns {
   width: 100%;
   float: left;
-  padding-left: 0.625rem;
-  padding-right: 0.625rem; }
-  @media screen and (min-width: 40em) {
+  padding-left: 0.6rem; //TODO target / context = result
+  padding-right: 0.6rem; }
+
+  @media screen and (min-width: 40em) { //tablets, desktops
     .column, .columns {
-      padding-left: 0.9375rem;
-      padding-right: 0.9375rem; } }
+      padding-left: 0.9rem; //increase padding
+      padding-right: 0.9rem; } }
+
   .column:last-child:not(:first-child), .columns:last-child:not(:first-child) {
     float: right; }
+
   .column.end:last-child:last-child, .end.columns:last-child:last-child {
     float: left; }
 
@@ -73,12 +55,11 @@
 
 .bit-3 {
     width: 25%;
+    float: left;
 }
 
 
-
-
-
+//Active Grid Sections
 
 .bit-1-3-3 { //titled based on responsive reflow (mobile-tablet-desktop)
     width: 100%; //mobile, single row
@@ -93,14 +74,18 @@
 
 
 
+.bit-6 {
+  width: 50%;
+  float: left;
+}
+
+
 
 .bit-5 {
     width: 41.66667%;
 }
 
-.bit-6 {
-  width: 50%;
-}
+
 
 .bit-7 {
   width: 58.33333%;
