--- a/style/scss/_grid.scss
+++ b/style/scss/_grid.scss
@@ -3,11 +3,13 @@
 
 
 //whole page wrapper
+/*
 #page {
   padding-left: 1.8rem;
   padding-right: 1.8rem;
 
 }
+*/
 
 
 
@@ -37,22 +39,25 @@
       padding-left: 0.9rem; //increase padding
       padding-right: 0.9rem; } }
 
+/*
   .column:last-child:not(:first-child), .columns:last-child:not(:first-child) {
     float: right; }
 
   .column.end:last-child:last-child, .end.columns:last-child:last-child {
     float: left; }
-
+*/
 
 //bits used to represent column widths, 12-col grid
 
-
+/*
 .bit-1 {
   width: 8.333%; }
 
 .bit-2 {
     width: 16.66667%; }
+*/
 
+//used by btn
 .bit-3 {
     width: 25%;
     float: left;
@@ -72,7 +77,47 @@
 
 }
 
+.bit-2-4-6 {
+  width: 50%;
+  float: left;
 
+  @media screen and (min-width: 40em) {
+    width: 25%;
+  }
+  @media screen and (min-width: 55em) {
+    width: 16.66667%;
+  }
+}
+
+.bit-2-3-3 {
+  width: 50%;
+  float: left;
+
+  @media screen and (min-width: 40em) {
+    width: 33.33333%;
+  }
+}
+
+.bit-1-2L-2L {
+  width: 100%; //mobile screen
+  float: left;
+
+  @media screen and (min-width: 40em) {
+    width: 41.66667%;
+  }
+}
+
+.bit-1-2R-2R {
+  width: 100%; //mobile screen
+  float: left;
+
+  @media screen and (min-width: 40em) {
+    width: 58.33333%;
+    padding-left: 25px;
+  }
+}
+
+//outstanding grid items ..
 
 .bit-6 {
   width: 50%;
@@ -85,25 +130,22 @@
     width: 41.66667%;
 }
 
+//Font size changes
 
-
-.bit-7 {
-  width: 58.33333%;
+@media screen and (min-width: 40em) { /* 480px and above */
+  body {
+    font-size: 90%;
+  }
 }
 
-.bit-8 {
-  width: 66.66667%;
+@media screen and (min-width: 64em) { /* 880 px and above */
+  body {
+    font-size: 95%;
+  }
 }
 
-.bit-9 {
-  width: 75%;
+@media screen and (min-width: 75em) { /* 1200px and above */
+  body {
+    font-size: 100%;
+  }
 }
-
-.bit-10 {
-   width: 83.33333%;
-}
-
-.bit-11 {
-  width: 91.66667%;
-}
-//.bit-12 is redundant, since column has width: 100% value.
